# portfolio-forecast

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
android/: Cargo.toml  build.sh
android/gradle/: gradle.properties  settings.gradle.kts
android/gradle/app/: build.gradle.kts
android/gradle/app/src/main/: AndroidManifest.xml
android/gradle/app/src/main/java/dev/gpui/mobile/: GpuiAudio.java  GpuiCamera.java  GpuiContentReader.java  GpuiDeepLink.java  GpuiFilePicker.java  GpuiHelper.java  GpuiImagePicker.java  GpuiLocation.java  GpuiMicrophone.java  GpuiNotifications.java  GpuiPermissions.java
android/gradle/app/src/main/res/drawable/: splash_background.xml  splash_icon.xml
android/gradle/app/src/main/res/values/: colors.xml  styles.xml
android/gradle/app/src/main/res/values-v31/: styles.xml
android/src/: lib.rs
common/: Cargo.toml  build.rs
common/examples/: example-portfolio.portfolio  example-portfolio.xml  generate_example_portfolio.py
common/proto/: client.proto
common/src/: android_content_reader.rs  android_orientation.rs  lib.rs  proto.rs
common/src/analysis/: balance.rs  mod.rs
common/src/format/: binary.rs  mod.rs  zip.rs
common/src/views/: mod.rs  portfolio_screen.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/views/: main_window.rs
doc/: forecast.md
ios/: Cargo.toml
ios/src/: lib.rs
